add button to move between the two pages

--- a/epidemiologyReport.html
+++ b/epidemiologyReport.html
@@ -14,6 +14,8 @@
     <article class="container">
         <br>
         <br>
+        <h1>View all the location </h1>
+        <br>
     <input type="text" placeholder="enter to search..." id="search">
     <br>
     <table class="table table-bordered table-striped table-hover">
@@ -21,6 +23,7 @@
         <th>End Date</th>
         <th>location</th>
     </table>
+    <button id="view" type="button" class="btn btn-primary">To view all the locations</button>
 </body>
 
 <script type="module" src="./epidemiologyReport.js"></script>
