--- a/viewPath.html
+++ b/viewPath.html
@@ -34,9 +34,10 @@
         <input class="input" type="datetime-local" placeholder="Enter End Date" id="endDate">
         <input class="input" type="text" placeholder="Enter City" id="city">
         <input class="input" type="text" placeholder="Enter Location" id="location">
-        <button type="submit" class="btn btn-primary" id="btn">Add Location</button>
-
+        <button id="add" type="submit" class="btn btn-primary">Add Location</button>
+        <button id="view" type="button" class="btn btn-primary">To view your Path</button>
+        <script type="module" src="./viewPath.js"></script>
+    </article>
 </body>
-<script type="module" src="./viewPath.js"></script>
 
 </html>
